2019-04-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Accept date and time separated by space instead of 'T'
	* Remove old SI definitions
	* uptime variable
	* Increase precision of "now"
	* Always truncate seconds in output date and time
	* Improve output of factorized result with approximately displayed values

2019-04-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improved simplification (polynomial long division) and factorization
	* Allow vector of values in replace()
	* Fix represents number test (should be either non-zero base OR, not AND, positive exponent)

2019-04-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix crash when formatting 1 / ((0 × 0)(1 / 0)^2)

2019-04-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Remove wide interval messages if final result is within precision
	* Fix options not output for "help set" in qalc
	* Rename "simplify" to "expand", to avoid confusion

2019-04-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Simplify y*f(x)+z*f(x) to (y+z)*f(x)

2019-04-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support for "portable" Windows version

2019-04-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improve currency symbol placement
	* Fix loading of interval arithmetic setting
	* Do not display more than the significant digits with non-decimal bases for intervals
	* Fix display of ending zeroes for approximate integers
	* Do not show fractions for approximate values with show ending zeroes activated
	* Fix display of roman numeral reciprocal
	* Show no item found message when find/search command fails
	* Improvements to polynomial division
	* Never add minus sign to ± value (uncertainty)

2019-04-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix potential segfault in acosh calculation
	* Add general number interval order check
	* acosh(0)=0.5i*pi, acosh(1)=0, and acosh(x)=acosh(-x)+i*pi when x<=-1
	* atanh(x)=atanh(1/x)-0.5i*pi when x > 1